[workspace]
members = ["variadiz-macros"]

[workspace.package]
authors = ["Nichts Hsu <NichtsVonChaos@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"
repository = "https://github.com/NichtsHsu/variadiz"
documentation = "https://docs.rs/variadiz"
keywords = ["variadic", "variadic-function", "parameter-pack", "no-std"]

[package]
name = "variadiz"
version = "1.3.2"
description = "Variadic function support for rust"
authors.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
categories = ["rust-patterns", "no-std", "no-std::no-alloc"]

[dependencies]
variadiz-macros = { version = "1.3.0", path = "variadiz-macros" }
tuplez = { version = ">=0.14.11", default-features = false }
