[package]
name = "variadiz-macros"
version = "1.1.2"
description = "Procedural macros implementation of variadiz"
authors.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true
documentation.workspace = true
repository.workspace = true
keywords.workspace = true
categories = [
    "rust-patterns",
    "development-tools::procedural-macro-helpers",
]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "visit-mut"] }
quote = "1.0"
nanoid = "0.4"
proc-macro2 = "1.0"
